--- a/posts/VPython/210909-1.md
+++ b/posts/VPython/210909-1.md
@@ -44,7 +44,7 @@ while True:
         break
 print("end", a)
 ```
-![210902-VPython-01.png](../../static/210909-VPython-01.png "210909-VPython-01")
+![210902-VPython-01.png](../../static/210909-VPython-01.PNG "210909-VPython-01")
 
 ---
 
@@ -89,7 +89,7 @@ while b.pos.y > 0:
     v = v + a
     sleep(0.1)  
 ```
-![210902-VPython-01.png](../../static/210909-VPython-02.png "210909-VPython-02")
+![210902-VPython-01.png](../../static/210909-VPython-02.PNG "210909-VPython-02")
 
 ---
 
