--- a/posts/VPython/210930-1.md
+++ b/posts/VPython/210930-1.md
@@ -157,7 +157,7 @@ while ball.pos.y > ground.pos.y:
 
 ## 02. 느낀점
 VPython의 Sphere함수 하나만으로 여러 물리법칙을 구현할 수 있는 점을 알았고, 다른 물리법칙도 VPython을 이용하여 구현해 보고 싶다고 생각하였습니다.
-<a style="font-size: 5px; color: red; ">선생님, 제발.../a>
+<a style="font-size: 5px; color: red; ">제발 다른거 해주세요...</a>
 
 [ProjectLink0]: https://glowscript.org/#/user/giyukim/folder/MyPrograms/program/210930-1 "Project Link"
 [ProjectLink1]: https://glowscript.org/#/user/giyukim/folder/MyPrograms/program/210930-2 "Project Link"
